welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var p : Int 
            ^Array2:22: error: object toInt is not a member of package ch
	p = ch.toInt litMessage();
               ^Array2:26: error: not found: value setBrosseCouleur
	setBrosseCouleur(k + p)
        ^