welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
	var T = new Array [Color](getWorldHeight())
	
	if(!estFaceMur){
		for (i <- 0 to (getWorldHeight()-2)) {
		T(i) = getCouleurSol();
		avance();
		}
	}
	if(estFaceMur){
		for (i <- 0 to (getWorldHeight()-2)){
		recule();
	}
	}
	gauche();avance();droite();

	baisseBrosse();
	litMessage();
	var p : Int 
	p = ch.toInt litMessage();

	for (k<-0 to getWorldHeight()-1){
	
	setBrosseCouleur(k + p)
	avance();
	}

	 

	
}
